--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   <amp-web-push
     id="amp-web-push"
     layout="nodisplay"
-    helper-iframe-url="./helper-iframe.html"
-    permission-dialog-url="./permission-dialog.html"
-    service-worker-url="./sw.js"
+    helper-iframe-url="https://8pockets.github.io/ampwa-notification/helper-iframe.html"
+    permission-dialog-url="https://8pockets.github.io/ampwa-notification/permission-dialog.html"
+    service-worker-url="https://8pockets.github.io/ampwa-notification/sw.js"
   ></amp-web-push>
 
   <amp-web-push-widget visibility="unsubscribed" layout="fixed" width="250" height="80">
