--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
   </style>
   <script async custom-element="amp-web-push" src="https://cdn.ampproject.org/v0/amp-web-push-0.1.js"></script>
-  <script async custom-element="amp-install-serviceworker" src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
+  <!-- <script async custom-element="amp-install-serviceworker" src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script> -->
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
 <body>
@@ -67,10 +67,10 @@
     Praesent pretium tincidunt lectus sit amet semper. Sed egestas vulputate
     ultricies. Nunc vestibulum porta ante sed iaculis.
   </p>
-  <amp-install-serviceworker
+  <!-- <amp-install-serviceworker
   src="./sw.js"
   layout="nodisplay"
   data-iframe-src="https://8pockets.github.io/ampwa-notification/sw.html">
-  </amp-install-serviceworker>
+  </amp-install-serviceworker> -->
 </body>
 </html>
